--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/registerStyle.css" />
+    <link rel="stylesheet" href="/css/loginStyle.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap"
@@ -15,21 +15,23 @@
   <body>
     <div class="container">
       <h1>Login Page</h1>
-      <!--  <% if(locals.err){ %>
-      <span id="ErrorMsg"> <%= err %> </span>
-      <% }%> -->
-      <% if (messages.error) {%> <%= messages.error %> <% } %>
-      <form action="/login" method="post">
+      <% if(messages.error){ %>
+      <span id="ErrorMsg"> <%= messages.error %> </span>
+      <% }%>
+      <!-- <% if (messages.error) {%> <%= messages.error %> <% } %> -->
+
+      <form action="/login" method="post" autocomplete="off">
         <div class="usernameInput">
           <label for="username">Username</label>
           <input type="text" name="username" id="username" />
         </div>
         <div class="passwordInput">
           <label for="password">Password</label>
-          <input type="text" name="password" id="password" />
+          <input type="password" name="password" id="password" />
         </div>
         <input type="submit" value="Submit" />
       </form>
+      <a href="/register">Don't have an account? Register</a>
     </div>
   </body>
 </html>
