--- a/public/css/lobbyStyle.css
+++ b/public/css/lobbyStyle.css
@@ -15,18 +15,35 @@ h1 {
   margin-top: 2rem;
   margin-bottom: 3rem;
 }
+.backToHomeHref {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
 #currentUser {
   display: none;
 }
-
-#groupName {
+.header {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   margin-bottom: 1.25rem;
-  text-align: center;
-  font-weight: 700;
-  font-size: 1.5rem;
-  color: #242424;
 }
+#groupName {
+  font-weight: 700;
+  font-size: 1.75rem;
+  color: #242424;
 
+  grid-column: 2;
+  justify-self: center;
+  align-self: center;
+}
+#leaveGroupBtn {
+  width: 1.75rem;
+  margin-left: 1rem;
+  grid-column: 1;
+  justify-self: left;
+  align-self: center;
+  cursor: pointer;
+}
 #usersDiv {
   padding: 1rem 0.5rem;
   margin: 0 auto;
