--- a/views/join-group/index.ejs
+++ b/views/join-group/index.ejs
@@ -18,7 +18,13 @@
       <form action="/joinGroupWithId" method="post">
         <div class="idInput">
           <label for="groupId">GROUP ID:</label>
-          <input type="text" name="groupId" id="groupId" autocomplete="off" />
+          <input
+            type="text"
+            name="groupId"
+            id="groupId"
+            autocomplete="off"
+            required
+          />
         </div>
         <input type="submit" value="JOIN GROUP" />
       </form>
